<!--
  Copyright 2013 Android Holo Colors by Jérôme Van Der Linden

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">Android Holo Colors</string>

    <string name="edittext">Edittext</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio">Radio</string>
    <string name="spinner">Spinner</string>
    <string name="button">Button</string>
    <string name="togglebutton">Toggle</string>
    <string name="seekbar">SeekBar</string>
    <string name="progressbar">ProgressBar</string>
    <string name="button_normal">normal</string>
    <string name="button_disable">disable</string>
    <string name="button_switch">Switch</string>
    <string name="ratingbar">RatingBar</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
